Pre semester minor tweaks

--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -438,7 +438,7 @@ We can rewrite the previous in terms of  equivalences of augmented matrices
 
 \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{15}
 A matrix is in \term{reduced row echelon form} (\term{RREF}) if
 \begin{enumerate}
 \item The leading term (first nonzero term) of each nonzero row is a 1.
@@ -447,8 +447,9 @@ A matrix is in \term{reduced row echelon form} (\term{RREF}) if
 \item Each term above or below a pivot is zero.
 \item All rows of zeroes are at the bottom of the matrix.
 \end{enumerate}
+\vfill
+Consider the following matrices
 
-Circle the leading terms in each example, and label it as RREF or not RREF.
 \begin{multicols}{3}
 \begin{enumerate}[(A)]
 \item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 3 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
@@ -459,6 +460,12 @@ Circle the leading terms in each example, and label it as RREF or not RREF.
 \item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 4 \\ 0 & 1 & 0 & 7 \\ 0 & 0 & 1 & 0 \end{bmatrix}\]
 \end{enumerate}
 \end{multicols}
+\begin{subactivity}
+For each matrix, circle the leading terms in each example, and label it as RREF or not RREF.
+\end{subactivity}
+\begin{subactivity}
+For the ones not in RREF, find their RREF.
+\end{subactivity}
 \end{activity}
 
 \begin{remark}
