--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -819,6 +819,11 @@ matrix to a determinant of a smaller matrix.
 \end{observation}
 
 \begin{activity}{10}
+Rewrite \[\det \begin{bmatrix} 2 & 1 & -2 & 1 \\ 3 & 0 & 1 & 4 \\ -2 & 2 & 3 & 0 \\ -2 & 0 & -3 & -3 \end{bmatrix} \] as a multiple of a determinant of a \(3\times3\) matrix.
+\end{activity}
+
+
+\begin{activity}{10}
   Compute 
   \(
     \det\begin{bmatrix} 
@@ -1119,6 +1124,14 @@ Set this characteristic polynomial equal to zero and factor to determine the eig
 \end{activity}
 
 \begin{activity}{10}
+  Find all the eigenvalues for the matrix
+  $A=\begin{bmatrix} 3 & -3 & 1 \\ 0 & -4 & 2 \\ 0 & 0 & 7 \end{bmatrix}$.
+\end{activity}
+
+
+
+
+\begin{activity}{10}
 It's possible to show that \(-2\) is an eigenvalue for
 \(\begin{bmatrix}-1&4&-2\\2&-7&9\\3&0&4\end{bmatrix}\).
 
@@ -1140,6 +1153,15 @@ to find all the eigenvectors \(\vec x\) such that \(A\vec x=-2\vec x\).
   we call this kernel the \term{eigenspace} of \(A\) associated with \(\lambda\).
 \end{definition}
 
+\begin{activity}{10}
+Find a basis for the eigenspace for the matrix
+\(
+  \begin{bmatrix}
+    0 & 0 & 3 \\ 1 & 0 & -1 \\ 0 & 1 & 3
+  \end{bmatrix}
+\)
+associated with the eigenvalue \(3\).
+\end{activity}
 
 \begin{activity}{10}
 Find a basis for the eigenspace for the matrix
@@ -1152,3 +1174,13 @@ associated with the eigenvalue \(1\).
 \end{activity}
 
 
+
+\begin{activity}{10}
+Find a basis for the eigenspace for the matrix
+\(
+  \begin{bmatrix}
+    4 & 3 & 0 & 0 \\ 3 & 3 & 0 & 0 \\ 0 & 0 & 2 & 5 \\ 0 & 0 & 0 & 2
+  \end{bmatrix}
+\)
+associated with the eigenvalue \(2\).
+\end{activity}
