--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -647,6 +647,13 @@ for the kernel of \(T\).
 \end{subactivity}
 \end{activity}
 
+\begin{activity}{10}
+Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by 
+\[ T\left(\begin{bmatrix} x \\ y \\ z \\ w \end{bmatrix} \right) = 
+\begin{bmatrix} 2x+4y+2z-4w \\ -2x-4y+z+w \\ 3x+6z-y-4w\end{bmatrix}.\]
+\vfill
+Find a basis for the kernel of \(T\).
+\end{activity}
 
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.
