Fix error in E.2.7 HW problem

--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -448,7 +448,7 @@ A matrix is in \term{reduced row echelon form} (\term{RREF}) if
 \item All rows of zeroes are at the bottom of the matrix.
 \end{enumerate}
 \vfill
-Consider the following matrices
+%Consider the following matrices
 
 \begin{multicols}{3}
 \begin{enumerate}[(A)]
@@ -460,12 +460,12 @@ Consider the following matrices
 \item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 4 \\ 0 & 1 & 0 & 7 \\ 0 & 0 & 1 & 0 \end{bmatrix}\]
 \end{enumerate}
 \end{multicols}
-\begin{subactivity}
-For each matrix, circle the leading terms in each example, and label it as RREF or not RREF.
-\end{subactivity}
-\begin{subactivity}
+%\begin{subactivity}
+For each matrix, circle the leading terms, and label it as RREF or not RREF.
+%\end{subactivity}
+%\begin{subactivity}
 For the ones not in RREF, find their RREF.
-\end{subactivity}
+%\end{subactivity}
 \end{activity}
 
 \begin{remark}
