Clarify phrasing on Module M RAT question

--- a/tex/modules/5-M/readiness/test.tex
+++ b/tex/modules/5-M/readiness/test.tex
@@ -98,7 +98,7 @@ Compute $(f \circ g)(2)$.
 \item Let $T: \IR^n \rightarrow \IR^m$ be a linear transformation with standard matrix $A$.  Which of the following is {\bf not} a characterization of the statement ``$T$ is injective''?
 \begin{readinessAssuranceTestChoices}
 \item If $T(\vec{v})=T(\vec{w})$ for some $\vec{v}, \vec{w} \in \IR^n$, then $\vec{v}=\vec{w}$.
-\item $T$ has a non-trivial kernel %Correct
+\item $T$ has a non-trivial kernel, i.e. \(\ker T \neq \left\{ \vec{0}\right\}\) %Correct
 \item The columns of $A$ are linearly independent
 \item $\RREF(A)$ has a pivot in every column
 \end{readinessAssuranceTestChoices}
