Tweak Module G, fixes #103

--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -224,8 +224,9 @@ Describe the value of \(\det([c\vec{v}\hspace{0.5em} \vec{w}])\).
 \end{center}
   \begin{enumerate}[a)]
     \item \(\det([\vec{v}\hspace{0.5em} \vec{w}])\)
-    \item \(\det([\vec{v}\hspace{0.5em} \vec{w}])+c\)
+    \item \(\det([\vec{v}\hspace{0.5em} \vec{w}])+c\det([\vec{v}\hspace{0.5em} \vec{w}]\)
     \item \(c\det([\vec{v}\hspace{0.5em} \vec{w}])\)
+	\item Cannot be determined from this information.
   \end{enumerate}
 \end{activity}
 
@@ -256,6 +257,7 @@ Describe the value of \(\det([\vec{u}+\vec{v}\hspace{0.5em} \vec{w}])\).
     \(\det([\vec{u}\hspace{0.5em} \vec{w}])+\det([\vec{v}\hspace{0.5em} \vec{w}])\)
     \item
     \(\det([\vec{u}\hspace{0.5em} \vec{w}])\det([\vec{v}\hspace{0.5em} \vec{w}])\)
+	\item Cannot be determined from this information.
   \end{enumerate}
 \end{activity}
 
@@ -1102,11 +1104,6 @@ Thus the characteristic polynomial of \(A\) is
 and its eigenvalues are the solutions to \(\lambda^2-5\lambda-2=0\).
 \end{definition}
 
-\begin{activity}{10}
-  Compute $\det(A-\lambda I)$ using co-factor expansion or another technique
-  to find the characteristic polynomial of
-  \(A=\begin{bmatrix} 6 & -2 & 1 \\ 0 & -5 & 0 \\ -4 & 2 & 1 \end{bmatrix}\).
-\end{activity}
 
 \begin{activity}{10}
 Let $A = \begin{bmatrix} 5 & 2 \\ -3 & -2 \end{bmatrix}$.
@@ -1118,9 +1115,14 @@ Set this characteristic polynomial equal to zero and factor to determine the eig
 \end{subactivity}
 \end{activity}
 
-\begin{activity}{10}
+\begin{activity}{5}
   Find all the eigenvalues for the matrix
   $A=\begin{bmatrix} 3 & -3 \\ 2 & -4 \end{bmatrix}$.
+\end{activity}
+
+\begin{activity}{5}
+  Find all the eigenvalues for the matrix
+  $A=\begin{bmatrix} 1 & -4 \\ 0 & 5 \end{bmatrix}$.
 \end{activity}
 
 \begin{activity}{10}
