--- a/tex/modules/5-M/activities.tex
+++ b/tex/modules/5-M/activities.tex
@@ -382,6 +382,16 @@ and a group that means \(T\) is \textbf{bijective}.
 \end{multicols}
 \end{activity}
 
+\begin{activity}{5}
+  Let \(T: \IR^3 \rightarrow \IR^3\) be the linear transformation given by the standard matrix
+  \(A=\begin{bmatrix} 2 & -1 & 0 \\ 2 & 1 & 4 \\ 1 & 1 & 3 \end{bmatrix}\).
+  
+  Write an augmented matrix representing the system of equations given by \(T(\vec x)=\vec{0}\),
+  that is, \(A\vec x=\begin{bmatrix}0 \\ 0 \\ 0 \end{bmatrix}\).
+  Then solve \(T(\vec x)=\vec{0}\) to find the kernel of \(T\).
+\end{activity}
+
+
 \begin{definition}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with standard matrix $A$.
 \begin{itemize}
